Remove deprecated code in DealParams and TaskDescription (#119)